--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -2,11 +2,22 @@
 <html>
 <head>
     <title>POC</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container">
     <input type="text" placeholder="Enter file id" id="fileid" />
-    <input type="button" onclick="getObject()" value="fetch object" />
-</body>
+    <input class="btn btn-info" type="button" onclick="getObject()" value="fetch object" />
+    </div>
+    <div class="preview"></div>
+    </body>
 <script>
 
 
@@ -21,7 +32,7 @@ var fetchObject = (token, fileid) => {
     var d = 'token='+token;
     fetch("https://slack.com/api/files.info?file="+fileid+"&token="+token).then(
         response => response.json()).then((json) => {
-            document.write(json["content_html"]);
+            document.getElementsByClassName("preview")[0].innerHTML = json["content_html"];
         })
 }
 
