--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -12,11 +12,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-    <input type="text" placeholder="Enter file id" id="fileid" />
-    <input class="btn btn-info" type="button" onclick="getObject()" value="fetch object" />
-    </div>
-    <div class="preview"></div>
+    <div class="form-group">
+                <br />
+                <div class="row">
+                    <div class="col-md-10">
+                        <input type="text" placeholder="Enter file ID" class="form-control" id="fileid">
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-success" onclick="getObject();">Fetch</button>
+                    </div>
+                </div>
+            </div>
     </body>
 <script>
 
