--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -12,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container">
     <div class="form-group">
                 <br />
                 <div class="row">
@@ -23,6 +24,7 @@
                     </div>
                 </div>
             </div>
+    </div>
     </body>
 <script>
 
