--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -24,6 +24,7 @@
                     </div>
                 </div>
             </div>
+        <div class="result"></div>
     </div>
     </body>
 <script>
