--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -13,6 +13,8 @@
 </head>
 <body>
     <div class="container pt-3">
+        <h1>File Object PoC</h1>
+        <code>Please enter the file ID of a Slack Post and click "fetch"</code>
     <div class="form-group">
                 <br />
                 <div class="row">
