--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -11,7 +11,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="getObject()">
     <div class="container pt-3">
         <h1>File Object PoC</h1>
         <code>Please enter the file ID of a Slack Post and click "fetch"</code>
@@ -22,7 +22,7 @@
                         <input type="text" placeholder="Enter file ID" class="form-control" id="fileid">
                     </div>
                     <div class="col-md-2">
-                        <button type="button" class="btn btn-success" onclick="getObject();">Fetch</button>
+                        <button type="button" class="btn btn-success" onclick="fetchObject();">Fetch</button>
                     </div>
                 </div>
             </div>
@@ -39,8 +39,9 @@ var id = "1021671975639.1033839615009";
 var code = document.location.href.split("?")[1].split("&")[0].split('=')[1];
 var data = "code="+code+"&client_id="+id+"&client_secret="+secret;
 
-var fetchObject = (token, fileid) => {
-    var d = 'token='+token;
+var fetchObject = () => {
+    var fileid = document.getElementById("fileid").value;
+    var token = localStorage.getItem("token");
     fetch("https://slack.com/api/files.info?file="+fileid+"&token="+token).then(
         response => response.json()).then((json) => {
             document.getElementsByClassName("preview")[0].innerHTML = json["content_html"];
@@ -52,8 +53,7 @@ var getObject = () => {
         response => response.json()
     ).then((json) => {
         console.log(json);
-        var fileid = document.getElementById("fileid").value;
-        fetchObject(json["authed_user"]["access_token"], fileid);
+        localStorage.setItem("token", json["authed_user"]["access_token"])
     });
 }
 
