--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -13,8 +13,8 @@
 </head>
 <body onload="getObject()">
     <div class="container pt-3">
-        <h1>File Object PoC</h1>
-        <code>Please enter the file ID of a Slack Post and click "fetch"</code>
+        <h1>Slack Posts Preview Generator</h1>
+        <code>This app can be used to generate previews for Slack Posts</code>
     <div class="form-group">
                 <br />
                 <div class="row">
@@ -26,6 +26,7 @@
                     </div>
                 </div>
             </div>
+        <h3><br />Preview</h3><hr />
         <div class="preview"></div>
     </div>
     </body>
