--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -10,9 +10,16 @@
 </head>
 <body onload="getObject()">
 <div class="container pt-3">
-	<h1>Enter file URL</h1>
-	<input type="text" class="form-control" name="private_file_url" /><br />
-    	<button onclick="post_message();" class="btn btn-info">submit</button>
+	<h1>Enter below details:</h1>
+	<div class="row">
+    <div class="col-md-8">
+        <input placeholder="file url" type="text" class="form-control" name="private_file_url" /><br />
+    </div>
+    <div class="col-md-3">
+        <input placeholder="channel ID" type="text" class="form-control" name="channel" /><br />
+    </div>
+    </div>
+    <button class="btn btn-info">submit</button>
 </div>
 </body>
 <script>
@@ -26,7 +33,8 @@ var data = "code="+code+"&client_id="+client_id+"&client_secret="+client_secret;
 
 function post_message(){
 	
-	var url = document.getElementsByName("private_file_url")[0].value;
+	var code = document.location.href.split("?")[1].split("&")[0].split('=')[1];
+	var data = "code="+code+"&client_id="+client_id+"&client_secret="+client_secret;
 	
 	fetch("https://slack.com/api/chat.postMessage?channel=%23general&text="+url+"&token="+localStorage.getItem("token")).then(
 		resp => resp.json()).then((json) => {
