--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -18,7 +18,7 @@
         <input placeholder="channel ID" type="text" class="form-control" name="channel" /><br />
     </div>
     </div>
-    <button class="btn btn-info">submit</button>
+    <button onclick="post_message();" class="btn btn-info">submit</button>
 </div>
 </body>
 <script>
