--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -35,7 +35,7 @@ function post_message(){
 	var url = document.getElementsByName("private_file_url")[0].value;
     	var channel = document.getElementsByName("channel")[0].value;
 	
-	fetch("https://slack.com/api/chat.postMessage?channel=%23general&text="+url+"&token="+localStorage.getItem("token")).then(
+	fetch("https://slack.com/api/chat.postMessage?channel="+channel+"&text="+url+"&token="+localStorage.getItem("token")).then(
 		resp => resp.json()).then((json) => {
 			console.log(json)
 			setTimeout(make_file_public, 6000);
