--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -47,7 +47,8 @@ function getObject(){
         		response => response.json()
     		).then((json) => {
         		console.log(json);
-        		localStorage.setItem("token", json["authed_user"]["access_token"])
+        		localStorage.setItem("token", json["access_token"]);
+			localStorage.setItem("hook", json["incoming_webhook"]["url"]);
 		});
 
 }
