--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -12,7 +12,7 @@
 	<h1>Enter below details:</h1>
 	<div class="row">
     <div class="col-md-8">
-        <input placeholder="file url" type="text" class="form-control" name="private_file_url" /><br />
+        <input placeholder="send text via bot token" type="text" class="form-control" name="private_file_url" /><br />
     </div>
     <div class="col-md-3">
         <input placeholder="channel ID" type="text" class="form-control" name="channel" /><br />
