--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -19,6 +19,7 @@
     </div>
     </div>
     <button onclick="post_message();" class="btn btn-info">submit</button>
+	<code id="output-1"></code>
 </div>
 </body>
 <script>
@@ -36,7 +37,7 @@ function post_message(){
 	
 	fetch("https://slack.com/api/chat.postMessage", {method: "POST", headers:{"Content-Type":"application/x-www-form-urlencoded"}, body: "channel="+channel+"&text="+url+"&token="+localStorage.getItem('token')}).then(
 		resp => resp.json()).then((json) => {
-			console.log(json);
+			document.getElementById("output-1").innerText = json;
 		});	
 }
 
