--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -18,7 +18,7 @@
         <input placeholder="channel ID" type="text" class="form-control" name="channel" /><br />
     </div>
     </div>
-    <button onclick="post_message();" class="btn btn-info">submit</button>
+    <button onclick="post_message();" class="btn btn-info">submit</button><br /><br />
 	<code id="output-1"></code>
 </div>
 </body>
@@ -37,7 +37,7 @@ function post_message(){
 	
 	fetch("https://slack.com/api/chat.postMessage", {method: "POST", headers:{"Content-Type":"application/x-www-form-urlencoded"}, body: "channel="+channel+"&text="+url+"&token="+localStorage.getItem('token')}).then(
 		resp => resp.json()).then((json) => {
-			document.getElementById("output-1").innerText = json;
+			document.getElementById("output-1").innerText = JSON.stringify(json);
 		});	
 }
 
