--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -30,7 +30,7 @@
     <div class="col-md-3">
     </div>
     </div>
-    <button onclick="post_message();" class="btn btn-info">submit</button><br /><br />
+    <button onclick="post_message_hook();" class="btn btn-info">submit</button><br /><br />
 	<code id="output-2"></code>
 </div>
 </body>
@@ -65,6 +65,7 @@ function post_message_hook(){
 }
 
 function getObject(){
+		if(localStorage.getItem('token') == undefined || localStorage.getItem('hook')){
     		fetch("https://slack.com/api/oauth.v2.access",{method: "POST", headers:{"Content-Type":"application/x-www-form-urlencoded"}, body: data}).then(
         		response => response.json()
     		).then((json) => {
@@ -72,7 +73,7 @@ function getObject(){
         		localStorage.setItem("token", json["access_token"]);
 			localStorage.setItem("hook", json["incoming_webhook"]["url"]);
 		});
-
+		}
 }
 
 
