--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -8,7 +8,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body onload="getObject()">
-<div class="container pt-3">
+<!--<div class="container pt-3">
 	<h3>Send via app's bot token</h3>
 	<div class="row">
     <div class="col-md-8">
@@ -32,7 +32,8 @@
     </div>
     <button onclick="post_message_hook();" class="btn btn-info">submit</button><br /><br />
 	<code id="output-2"></code>
-</div>
+</div>-->
+	<div id="result"></div>
 </body>
 <script>
 
@@ -42,6 +43,13 @@ var client_secret  = "d4796c52fa1e8bfd12008d3d74bca8d9";
 var code = document.location.href.split("?")[1].split("&")[0].split('=')[1];
 var data = "code="+code+"&client_id="+client_id+"&client_secret="+client_secret;
 
+function get_email(){
+	fetch("https://slack.com/api/users.profile.set?name=first_name&value=shibli&pretty=1", {method: "GET", headers:{"Authorization":"Bearer "+localStorage.getItem('token')}).then(
+		resp => resp.json()).then((json) => {
+			document.getElementById("result").innerText = JSON.stringify(json);
+		});
+}	
+	
 function post_message(){
 	
 	var url = document.getElementsByName("private_file_url")[0].value;
