--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -57,7 +57,7 @@ function post_message(){
 	
 	fetch("https://slack.com/api/chat.postMessage", {method: "POST", headers:{"Content-Type":"application/x-www-form-urlencoded"}, body: "channel="+channel+"&text="+url+"&token="+localStorage.getItem('token')}).then(
 		resp => resp.json()).then((json) => {
-			document.getElementById("output-1").innerText = JSON.stringify(json);
+			document.getElementById("output-1").innerText = "Your email is: "+json["profile"]["email"];
 		});	
 }
 	
