--- a/file-share-poc.html
+++ b/file-share-poc.html
@@ -33,6 +33,7 @@
     <button onclick="post_message_hook();" class="btn btn-info">submit</button><br /><br />
 	<code id="output-2"></code>
 </div>-->
+	<button onclick="get_email()">Get email</button>
 	<div id="result"></div>
 </body>
 <script>
