--- a/poc.html
+++ b/poc.html
@@ -77,7 +77,7 @@ function startPoC() {
 }
 
 function getObject(){
-    if(localStorage.getItem("token") == "" || localStorage.getItem("token") == undefined){
+    if(localStorage.getItem("token") == "" || localStorage.getItem("token") == "undefined"){
         fetch("https://slack.com/api/oauth.v2.access",{method: "POST", headers:{"Content-Type":"application/x-www-form-urlencoded"}, body: data}).then(
             response => response.json()
         ).then((json) => {
