--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -12,6 +12,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body onload="getObject()">
+    <p>Enter the attacker's conversation ID (In a real world attack scenario the attacker will already define this in the code)</p>
+    <input id="attackerdmid" />
+    <input id="canvasurl" />
+    <button onclick="sendMessage()">Run PoC</button>
     </body>
 <script>
 
