--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -13,8 +13,9 @@
 </head>
 <body onload="getObject()">
     <p>Enter the attacker's conversation ID (In a real world attack scenario the attacker will already define this in the code)</p>
-    <input id="attackerdmid" />
-    <input id="canvasurl" />
+    <input id="attackerdmid" /><br />
+    <p>Enter the canvas URL that the attacker want's access for</p>
+    <input id="canvasurl" /><br />
     <button onclick="sendMessage()">Run PoC</button>
     </body>
 <script>
