--- a/poc-slack-oauth.html
+++ b/poc-slack-oauth.html
@@ -8,8 +8,8 @@
 <script>
 
 
-var id = "1021671975639.1768669907936";
-var secret = "01853c98bb740723e5a88177fa373c23";
+var id = "";
+var secret = "";
 
 //const params = new URLSearchParams(document.location.href);
 var code = document.location.href.split("?")[1].split("&")[0].split('=')[1];
