--- a/poc-slack-oauth.html
+++ b/poc-slack-oauth.html
@@ -8,8 +8,8 @@
 <script>
 
 
-var id = "";
-var secret = "";
+var id = "1021671975639.7107536914023";
+var secret = "25ff5938bf695c0a527a135941b957e9";
 
 //const params = new URLSearchParams(document.location.href);
 var code = document.location.href.split("?")[1].split("&")[0].split('=')[1];
